--- a/math_livecoding/2-LiveCoding_Matrices.ipynb
+++ b/math_livecoding/2-LiveCoding_Matrices.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 110,
    "id": "4c0fa2da",
    "metadata": {},
    "outputs": [
@@ -363,16 +363,31 @@
       "Puedo crear una matriz diagonal:\n",
       "[[4 0 0]\n",
       " [0 5 0]\n",
-      " [0 0 6]]\n",
+      " [0 0 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Puedo crear una matriz diagonal:')\n",
+    "print(np.diag([4, 5, 6]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "7b5466fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "O puedo extraer los valores de la diagonal: [1 5 9]\n"
      ]
     }
    ],
    "source": [
-    "print('Puedo crear una matriz diagonal:')\n",
-    "print(np.diag([4, 5, 6]))\n",
-    "\n",
     "D = np.array([\n",
     "        [1, 2, 3],\n",
     "        [4, 5, 6],\n",
@@ -395,31 +410,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 112,
    "id": "f6913f15",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.eye(9)"
+    "np.eye(5)"
    ]
   },
   {
@@ -432,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 114,
    "id": "732e7f79",
    "metadata": {},
    "outputs": [
@@ -445,13 +456,13 @@
        "       [ 0., 21.]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.eye(?).dot(np.array([\n",
+    "np.eye(4).dot(np.array([\n",
     "    [10,7],\n",
     "    [0,50],\n",
     "    [0,5],\n",
@@ -622,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 119,
    "id": "84cf508a",
    "metadata": {},
    "outputs": [
@@ -675,12 +686,25 @@
     "\\begin{bmatrix}\n",
     "  930 & 1160 & 1320 & 1560 \\\\\n",
     "  2010 & 2510 & 2910 & 3450\n",
-    "\\end{bmatrix}$$"
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "No es lo mismo que\n",
+    "\n",
+    "$$F = DA =\\begin{bmatrix}\n",
+    "  2 & 3 & 5 & 7 \\\\\n",
+    "  11 & 13 & 17 & 19 \\\\\n",
+    "  23 & 29 & 31 & 37\n",
+    "\\end{bmatrix}\n",
+    " \\begin{bmatrix}\n",
+    "  10 & 20 & 30 \\\\\n",
+    "  40 & 50 & 60\n",
+    "\\end{bmatrix} \n",
+    " = ERROR$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 120,
    "id": "71b49add",
    "metadata": {},
    "outputs": [
@@ -691,7 +715,7 @@
        "       [2010, 2510, 2910, 3450]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 121,
    "id": "b26f0037",
    "metadata": {},
    "outputs": [
@@ -767,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 123,
    "id": "6ce7f847",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 124,
+   "id": "63429f8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  5,  7],\n",
+       "       [11, 13, 17, 19],\n",
+       "       [23, 29, 31, 37]])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "id": "0b960bf8",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1215,7 @@
        "       [ 547, 1860, 3700]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,12 +1236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 126,
    "id": "0fc7ce65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 5])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "u = np.array([2, 5])"
+    "u = np.array([2, 5])\n",
+    "u"
    ]
   },
   {
@@ -1696,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 127,
    "id": "7360efde",
    "metadata": {},
    "outputs": [
@@ -1704,6 +1763,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[3.  4.  1.  4.6]\n",
+      " [0.2 3.5 2.  0.5]]\n",
       "[[4.  6.  4.  8.6]\n",
       " [1.2 5.5 5.  4.5]]\n",
       "\n",
@@ -1712,6 +1773,7 @@
     }
    ],
    "source": [
+    "print(P)\n",
     "print(P + [1,2,3,4])\n",
     "print()\n",
     "try:\n",
@@ -1819,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 130,
    "id": "7fb84b92",
    "metadata": {},
    "outputs": [
