Comment pip lines for instalation

--- a/machine_learning/forecasting_nfp_lr/NFP.ipynb
+++ b/machine_learning/forecasting_nfp_lr/NFP.ipynb
@@ -77,9 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install scikit-learn\n",
-    "!pip install openpyxl\n",
-    "!pip install matplotlib\n",
+    "# !pip install scikit-learn\n",
+    "# !pip install openpyxl\n",
+    "# !pip install matplotlib\n",
     "\n",
     "# Required libraries\n",
     "import math\n",
